--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
   background-color: #121619;
   display: flex;
   flex-direction: row;
-  border-bottom: white;
+  border-bottom: white 300px;
 }
 
 .navbar .leftSide {
